--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ on my first webpage...
         <ul>
                 <li><a href="https://www.instagram.com" title="Go to our instagram page or app">intagram!</a></li>
                 <li><a href="https://www.twitter.com" title="Go to our twitter page or app">twitter!</a></li>
-                <li><a href="mailto: anurieli365@gmail.com" title="Write us out a letter, we are resonsive!"> Email!</a>
+                <li><a href="mailto: anurieli365@gmail.com" title="Write us out a letter, we are resonsive!"> Email Us!</a>
                 </li>
                 <li><a href="#homepage" title="Visit Our Homepage!"> Website!</a></li>
         </ul>
